--- a/assets/css/programs.css
+++ b/assets/css/programs.css
@@ -1,3 +1,48 @@
+	#programs {
+		margin: 30px 0 60px 0;
+		float: left;
+		clear: both;
+		}
+		
+	#programs a {
+		position: relative;
+		float: left;
+		}
+		
+	#programs a:first-child div.overlay {
+		left: 0;
+		}
+		
+	#programs a div.overlay {
+		-webkit-transition: opacity 0.2s ease-in-out;
+		background: #FFFFFF;
+		position: absolute;
+		height: 400px;
+		width: 220px;
+		opacity: 0.3;
+		left: 10px;
+		top: 0;
+		}
+		
+	#programs a:hover div.overlay {
+		opacity: 0;
+		}
+		
+	#programs a:hover h4 {
+		color: #B94929;
+		}
+		
+	#programs ul li {
+		-webkit-transition: color 0.2s ease-in-out;
+		list-style: none;
+		font-size: 12px;
+		color: #999999;
+		}
+		
+	#programs ul li:hover {
+		color: #333333;
+		}
+		
 /* Course Track */
 	#course_track ul {
 		border-top: 1px solid #CCCCCC;
