--- a/assets/css/exhibition.css
+++ b/assets/css/exhibition.css
@@ -182,41 +182,44 @@
 		color: #333333;
 		}
 		
-	blockquote:hover span.mark {
-		top: -16px;
-		}
-		
 	blockquote span.mark {
 		-webkit-transition: all 0.2s ease-in-out;
 		position: absolute;
 		font-size: 72px;
 		color: #F26325;
+		z-index: -1;
 		left: -46px;
 		top: -18px;
-		z-index: -1;
 		}
 		
 	/* Slideshow */
 	div#exhibition div.slideshow {
-		margin-top: 50px; /* Hacking */
-		margin-bottom: 40px;
+		margin-top: 10px; /* Hacking */
+		margin-bottom: 20px;
 		background: #666666;
+		position: relative;
 		height: 325px;
 		width: 100%;
 		float: left;
 		}
 		
-	div#exhibition div.slideshow div {
-		border-bottom: 1px solid #999999;
+	div#exhibition div.slideshow div.inner {
+		position: absolute;
+		width: 1600px;
+		left: -60px;
+		}
+		
+	div#exhibition div.slideshow > div:not(.inner) {
 		padding: 5px 5px 5px 0;
 		background: #F26236;
 		margin-bottom: -5px;
 		}
 		
 	div#exhibition div.slideshow h3 {
+		padding: 5px 0 8px 0;
 		margin: -5px 0 0 10px;
 		border-bottom: 0;
-		font-size: 18px;
+		font-size: 14px;
 		color: #FFFFFF;
 		}
 		
@@ -228,19 +231,19 @@
 		clear: none;
 		}
 		
-	div#exhibition div.slideshow figure:hover div.overlay {
-		opacity: 0;
-		}
-		
 	div#exhibition div.slideshow figure div.overlay {
 		-webkit-transition: opacity 0.2s ease-in-out;
 		background: #000000;
 		position: absolute;
 		opacity: 0.8;
-		height: 100%;
-		width: 100%;
+		height: 290px;
+		width: 387px;
 		top: 6px;
 		left: 0;
+		}
+		
+	div#exhibition div.slideshow figure:hover div.overlay {
+		opacity: 0;
 		}
 		
 	div#exhibition div.slideshow figure img {
@@ -265,3 +268,11 @@
  		margin-top: -3px;
  		}
  }
+ 
+/**
+ * Hacks
+ *
+ */
+ #hero {
+ 	margin-bottom: 10px;
+ 	}
