--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@
 	#hero, 
 	#sidekick {
 		background: #F36235;
+		position: relative;
 		margin-top: -30px;
 		width: 938px;
 		}
@@ -103,7 +104,10 @@
 		float: left;
 		}
 		
-	
+	figcaption.byline.center {
+		position: relative;
+		z-index: 2;
+		}
 		
 	/* Hero Slideshow — Frontpage */
 	#hero .slideshow {
@@ -517,6 +521,10 @@
 		
 	.clear {
 		clear: both;
+		}
+	
+	.center {
+		text-align: center;
 		}
 		
 	.none {
