group project for faculty

--- a/assets/css/intranet_faculty.css
+++ b/assets/css/intranet_faculty.css
@@ -333,6 +333,13 @@
 		top:3px;
 		}
 	
+	section#project ul.team_project span{
+		padding-top: 0px;
+		margin-bottom: 0px;
+		margin-top: 0px;
+		padding-bottom: 0px !important;
+		}
+	
 /**
  * Intranet
  * Prints
