--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -1,3 +1,11 @@
+	a {
+		color: #888888 !important;
+		}
+		
+	a:hover {
+		color: #333333 !important;
+		}
+	
 	header,
 	#sidekick {
 		background: #888888;
@@ -11,4 +19,16 @@
 	/* Side Navigation */
 	#side_nav ul li:hover {
 		background: #888888;
+		}
+		
+	/* Takeaways */
+	ul#takeaways li {
+		list-style: none;
+		}
+		
+	ul#takeaways li p {
+		margin-bottom: 20px;
+		min-height: 75px;
+		font-size: 12px;
+		float: left;
 		}
