--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -58,17 +58,19 @@
 		
 	/* Side Architecture */
 	ul#site_architecture{
+		margin-left: 0px;
 		list-style: none;
 		color: orange;
 		}
 		
 	ul#site_architecture>li{
-		margin-left: 20px;
+		float: left;
+		width: 220px;
+		height: 900px;
+/* 		margin-left: 20px; */
 		}
 	
 	ul#site_architecture>li>ul{
-		/* float: left; */
-		/* width: 100px; */
 		color: red;
 		list-style: none;
 		}
