--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -65,6 +65,12 @@
 		}
 
 	/* Colors */
+	.tipsy-inner > div {
+		padding-bottom: 5px;
+		font-size: 12px;
+		clear: both;
+		}
+	
 	.color {
 		margin-right: 20px;
 		height: 60px; 
@@ -114,6 +120,19 @@
 		
 	.cmu-black {
 		background-color: #000000;
+		}
+		
+	/* Typography */
+	.type {
+		margin: 20px 0 30px 0;
+		float: left;
+		clear: both;
+		}
+		
+	.type h3 {
+		font-size: 21px;
+		padding: 0;
+		border: 0;
 		}
 
 	/* Side Architecture */
