--- a/assets/css/guide.css
+++ b/assets/css/guide.css
@@ -136,9 +136,11 @@
 		margin-bottom: 10px;
 		}
 
-	/* Side Architecture */
-	
-	ul#site_architecture {
+	/* Site Architecture */
+	ul#site_architecture {	
+		border-top: 1px solid #666666;
+		margin-top: 40px;
+		padding-top: 10px;
 		margin-left: 0px;
 		list-style: none;
 		}
