Lots of preparatory changes for next week. Mostly standardizations, some new content.
• Standardized the footer after adding new social icons in a CSS sprite.
• Removed the dropdown menu for "Exhibition" in top-level nav.
• Added another article, "The Future of Ebooks", and moved articles to
their own directory.
• Linked articles using the bottom bar UI element.
• Fixed a bug with the sticky footer and the bottom bar in
aline_skirts_01.htm with a hack
• Added a fancybox for displaying Alex's video on the frontpage.
• Added a 404 page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,7 +243,7 @@
 		}
 		
 	.relativity figure.video_wrapper:hover .video {
-		background: #F2A919;
+		background: #F36235;
 		cursor: pointer;
 		}
 		
@@ -945,7 +945,7 @@
 		}
 		
 	figure.frontpage.video_wrapper:hover .video {
-		background: #F2A919;
+		background: #F36235;
 		cursor: pointer;
 		}
 		
@@ -1225,6 +1225,31 @@
 		float: left;
 		clear: both;
 		}
+
+/* Social */
+	.social {
+		margin-right: 5px;
+		height: 34px;
+		width: 30px;
+		float: left;
+		}
+		
+	.facebook {
+		background: url('../img/social.png') 0 0 no-repeat;
+		}
+		
+	.twitter {
+		background: url('../img/social.png') -34px 0 no-repeat;
+		}
+		
+	.linkedin {
+		background: url('../img/social.png') -69px 0 no-repeat;
+		}
+		
+	.vimeo {
+		background: url('../img/social.png') -104px 0 no-repeat;
+		}
+	
 
 /* Hacks */
 	.bumper {
