Ported over the School > "What is Design?" page

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
     <meta name="author" content="Justin Edmund and David Yen">
 
     <!-- CSS : implied media="all" -->
-		<link rel="stylesheet" href="assets/css/reset.css">
-		<link rel="stylesheet" href="assets/css/960.css">
-		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="/school_of_design/assets/css/reset.css">
+		<link rel="stylesheet" href="/school_of_design/assets/css/960.css">
+		<link rel="stylesheet" href="/school_of_design/assets/css/style.css">
 		
 		<!-- Page-specific CSS should be loaded in the template file
 		     using the "styles" block. -->
