--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <header>
 	<div class="container_12">
 		<div class="grid_2">
-			<a href="index.htm">
+			<a href="/school_of_design">
 				<h1 id="logo">Carnegie Mellon Design</h1>
 			</a>
 		</div>
